--- a/app/views/g/index.html.erb
+++ b/app/views/g/index.html.erb
@@ -1,6 +1,7 @@
-<h1>G#index</h1>
-<p>Find me in app/views/g/index.html.erb</p>
-<%= simple_form_for @user do |f| %>
-  <%= f.input :title %>
-  <%= f.button :submit %>
+<% if user_signed_in?%>
+  <h1><%= current_user.first_name%></h1><br>
+<%end%>
+
+<% @tags.each do |tag|%>
+  <%= tag.title%>
 <% end %>
