--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,12 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <%= form_tag(search_path, method: :get) do %>
+    <div class= "input-group" style="position: relative;">
+      <%= text_field_tag(:search, params[:search])%>
+      <%= submit_tag ("Search")%>
+    </div>
+  <% end %>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
