--- a/app/views/tasks/edit.html.slim
+++ b/app/views/tasks/edit.html.slim
@@ -1,6 +1,1 @@
-=simple_form_for @tag do |f|
-	-@tag.errors.full_messages_for(:user_id).each do |message|
-		=message
-	=f.input :title
-	=f.input :user_id, as: :hidden, input_html: { value: current_user.id }
-	=f.button :submit
+=render "tasks/task_form"
