--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,9 +1,13 @@
 div style = "text-align:center" 
 	h1 = "All Tasks for user #{current_user.first_name}" 
 	br
-	=link_to "Create new task", new_task_path,class:"btn btn-primary"
+	
+		h2 Choose scope
+		div class="btn-group" role="group" aria-label="Basic outlined example"
+			=link_to "not completed","#{tasks_path}?is_done=false",class:"btn btn-outline-primary"
+			=link_to "completed","#{tasks_path}?is_done=true",class:"btn btn-outline-primary"
+			=link_to "all","#{tasks_path}",class:"btn btn-outline-primary"
 div class = "container"
-	==pagy_nav(@pagy)
 	br
 	table class="table table-dark table-striped table-bordered table-fixed"
 		thead
@@ -11,20 +15,25 @@ div class = "container"
 				th Title
 				th Description
 				th Tags
+				th Project
+				th Completion
 				th File
-				th Is Completed
 				th
 				th 
 				th 
-
 		tbody
 			- @tasks.each do |task|
 				tr
 					td=task.title
 					td=task.description
 					td=task.show_tags
-					td	
-					td=task.is_done
+					td=link_to task.project.title,"#{tasks_path}?project=#{task.project.id}" unless task.project==nil
+					td=render "tasks/complete_button",task: task
+					td
 					td=link_to "closer look", "tasks/#{task.id}"
 					td=link_to "edit", edit_task_path(task.id)
 					td=link_to "delete", "tasks/#{task.id}", data: {turbo_method: :delete,turbo_confirm: "Are you sure?"}
+	==pagy_nav(@pagy)
+div style = "text-align:center" 
+
+	=link_to "Create new task", new_task_path,class:"btn btn-primary"
