--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -1,3 +1,6 @@
-h1
-	=@project.title
-=@project.position
+div class="card container" style="text-align: center"
+	div class="card-header"
+		h1=@project.title
+	div class="card-body"
+		h5 class="card-title"
+			=@project.position
