--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,32 @@
-<h2>Sign up</h2>
+<h2 style="text-align:center;"><%= t(:sign_up)%></h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs container">
     <%= f.input :first_name,
                 required: true,
-                autofocus: true%>
+                autofocus: true,label: t(:first_name)%>
     <%= f.input :surname,
-                required: true%>
+                required: true,label: t(:surname)%>
     <%= f.input :email,
                 required: true,
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
                 required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password" },label: t(:password) %>
     <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password" },label: t(:password_confirmation) %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
+  <div style="text-align:center" class="form-actions">
+    <%= f.button :submit, t(:sign_up),class:"btn btn-primary btn-lg" %>
+    <br>
 <% end %>
+<br>
+    <%= link_to t(:sign_in), new_user_session_path, class:"btn btn-outline-primary" %>
+  </div>
 
-<%= render "devise/shared/links" %>
+
+
