--- a/app/views/g/index.html.erb
+++ b/app/views/g/index.html.erb
@@ -1,7 +1,1 @@
-<% if user_signed_in?%>
-  <h1><%= current_user.first_name%></h1><br>
-<%end%>
-
-<% @tags.each do |tag|%>
-  <%= tag.title%>
-<% end %>
+<h1 style="text-align: center;">Vítejte</h1>
