--- a/app/views/g/search.html.slim
+++ b/app/views/g/search.html.slim
@@ -1,24 +1,23 @@
 div style = "text-align:center" 
-	h1 = "Search results for #{current_user.first_name}" 
+	h1 = "#{t(:search_results)} #{current_user.first_name}" 
 	br
 div class = "container"
-	==pagy_nav(@pagy)
 	br
 	table class="table table-dark table-striped table-bordered table-fixed"
 		thead
 			tr
-				th Title
-				th Type
+				th=t(:title)
+				th=t(:type)
 				th
 				th 
 				th 
 
 		tbody
 			- @results.each do |result|
-				-puts result.title
 				tr
 					td=highlight(result.title,params[:search])
 					td=result.class.name
-					td=link_to "closer look", "tasks/#{result.id}"
-					td=link_to "edit", edit_task_path(result.id)
-					td=link_to "delete", "tasks/#{result.id}", data: {turbo_method: :delete,turbo_confirm: "Are you sure?"}
+					td=link_to t(:show), "tasks/#{result.id}"
+					td=link_to t(:edit), edit_task_path(result.id)
+					td=link_to t(:delete), "tasks/#{result.id}", data: {turbo_method: :delete,turbo_confirm: "Are you sure?"}
+	==pagy_nav(@pagy)
