--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,15 +11,31 @@
   <% end %>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <%=link_to "Muj ucet", edit_user_registration_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%=link_to "Registrace", new_user_registration_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%=link_to "Prihlasit se", new_user_session_path, class: "nav-link" %>
-      </li>
+      
+      <% unless user_signed_in?%>
+        <li class="nav-item">
+          <%=link_to t("sign_up"), new_user_registration_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%=link_to t("sign_in"), new_user_session_path, class: "nav-link" %>
+        </li>
+      <% else%>
+        <li class="nav-item active">
+          <%=link_to t(:tasks), tasks_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%=link_to t(:tags), tags_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%=link_to t(:projects), projects_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%=link_to t(:my_acc), edit_user_registration_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%=link_to t(:sign_out), destroy_user_session_path, class: "nav-link" %>
+        </li>
+      <% end%>
     </ul>
   </div>
 </nav>
