--- a/app/views/projects/index.html.slim
+++ b/app/views/projects/index.html.slim
@@ -1,15 +1,14 @@
 div style = "text-align:center" 
-	h1 = "All projects for user #{current_user.first_name}" 
+	h1 = "#{t(:all_projects)} #{current_user.first_name}" 
 	br
-	=link_to "Create new project", new_project_path,class:"btn btn-primary"
+	=link_to t(:create_new), new_project_path,class:"btn btn-primary"
 div class = "container"
-	==pagy_nav(@pagy)
 	br
 	table class="table table-dark table-striped table-bordered"
 		thead
 			tr
-				th Position
-				th Title
+				th =t(:position)
+				th =t(:title)
 				th
 				th 
 				th 
@@ -20,6 +19,7 @@ div class = "container"
 				tr
 					td=project.position
 					td=project.title	
-					td=link_to "closer look", "projects/#{project.id}"
-					td=link_to "edit", edit_project_path(project.id)
-					td=link_to "delete", "projects/#{project.id}", data: {turbo_method: :delete,turbo_confirm: "Are you sure?"}
+					td=link_to t(:show), "projects/#{project.id}"
+					td=link_to t(:edit), edit_project_path(project.id)
+					td=link_to t(:delete), "projects/#{project.id}", data: {turbo_method: :delete,turbo_confirm: "Are you sure?"}
+	==pagy_nav(@pagy)
