--- a/app/views/tasks/_complete_button.html.slim
+++ b/app/views/tasks/_complete_button.html.slim
@@ -1,4 +1,4 @@
 -if task.is_done
-	=link_to "undo task", complete_path(task.id)
+	=link_to "✔ #{t(:undo_task)}", complete_path(task.id)
 -else
-	=link_to "mark as done", complete_path(task.id)
+	=link_to "❌ #{t(:mark_task)}", complete_path(task.id)
