--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,23 +1,23 @@
 div style = "text-align:center" 
-	h1 = "All Tasks for user #{current_user.first_name}" 
+	h1 = "#{t(:all_tasks)} #{current_user.first_name}" 
 	br
 	
-		h2 Choose scope
+		h2 =t(:choose_scope)
 		div class="btn-group" role="group" aria-label="Basic outlined example"
-			=link_to "not completed","#{tasks_path}?is_done=false",class:"btn btn-outline-primary"
-			=link_to "completed","#{tasks_path}?is_done=true",class:"btn btn-outline-primary"
-			=link_to "all","#{tasks_path}",class:"btn btn-outline-primary"
+			=link_to t("not_completed"),"#{tasks_path}?is_done=false",class:"btn btn-outline-primary"
+			=link_to t("completed"),"#{tasks_path}?is_done=true",class:"btn btn-outline-primary"
+			=link_to t("all"),"#{tasks_path}",class:"btn btn-outline-primary"
 div class = "container"
 	br
 	table class="table table-dark table-striped table-bordered table-fixed"
 		thead
 			tr
-				th Title
-				th Description
-				th Tags
-				th Project
-				th Completion
-				th File
+				th =t(:title)
+				th =t(:description)
+				th =t(:tags)
+				th =t(:project)
+				th =t(:completion)
+				th =t(:file)
 				th
 				th 
 				th 
@@ -29,11 +29,11 @@ div class = "container"
 					td=task.show_tags
 					td=link_to task.project.title,"#{tasks_path}?project=#{task.project.id}" unless task.project==nil
 					td=render "tasks/complete_button",task: task
-					td
-					td=link_to "closer look", "tasks/#{task.id}"
-					td=link_to "edit", edit_task_path(task.id)
-					td=link_to "delete", "tasks/#{task.id}", data: {turbo_method: :delete,turbo_confirm: "Are you sure?"}
+					td=task.file.identifier
+					td=link_to t(:show), "tasks/#{task.id}"
+					td=link_to t(:edit), edit_task_path(task.id)
+					td=link_to t(:delete), "tasks/#{task.id}", data: {turbo_method: :delete,turbo_confirm: "Are you sure?"}
 	==pagy_nav(@pagy)
 div style = "text-align:center" 
 
-	=link_to "Create new task", new_task_path,class:"btn btn-primary"
+	=link_to t(:create_new), new_task_path,class:"btn btn-primary"
