--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -8,3 +8,7 @@ div class="card container" style="text-align: center"
 		p class="card-text" 
 			=@task.description
 		=render "tasks/complete_button",task: @task
+div style = "text-align:center" 
+	=link_to t(:edit), edit_task_path(@task), class: "btn btn-primary"
+	=link_to t(:delete), @task,data: {turbo_method: :delete,turbo_confirm: "Are you sure?"}, class: "btn btn-primary"
+	=link_to t(:create_new), new_task_path,class:"btn btn-primary"
